[Home]

Summary:ASTERISK-25546: threadpool: Race condition between idle timeout and activation
Reporter:Joshua C. Colp (jcolp)Labels:
Date Opened:2015-11-11 09:57:23.000-0600Date Closed:2015-11-12 06:11:11.000-0600
Priority:MajorRegression?No
Status:Closed/CompleteComponents:Core/General
Versions:13.6.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:A race condition exists in the threadpool implementation which allows a thread to die due to an idle timeout while still remaining in the active threads container. This will occur if the thread is activated when the idle timeout process is occurring.
Comments: